--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,24 @@
 h1 {
   text-align: center;
 }
+
+nav ul {
+  display: flex;
+  justify-content: start;
+}
+
+li {
+  padding: 10px 20px;
+  list-style: none;
+  font-size: 20px;
+}
+
+li a {
+  color: #4b4b4b;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+li a:hover {
+  color: #4ED075;
+}
